--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.11.0",
     "@supabase/supabase-js": "^2.93.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "dotenv": "^17.2.3",
